tests/neg/i2117.scala
class A {
  C.super.foo() // error: C isn't an enclosing class
}
